--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+/functions/lib/**/*.js
+/functions/lib/**/*.js.map
 # dependencies
 /node_modules
+/functions/node_modules
 /.pnp
 .pnp.js
-
+/functions/typings/
 # testing
 /coverage
 
